add swagger documentation comments
