# config/internal/controllers/Alerts/post_alert.go
@@ -9,7 +9,17 @@ import (
 "net/http"
 )
 
-// CreateAlertHandler gère la création d'une nouvelle alerte.
+// CreateAlertHandler creates a new alert.
+// @Summary Create a new alert
+// @Description This endpoint allows you to create a new alert by providing the necessary details.
+// @Tags Alerts
+// @Accept json
+// @Produce json
+// @Param alert body models.Alert true "Alert object"
+// @Success 201 {object} models.Alert "The newly created alert"
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal server error"
+// @Router /alerts [post]
 func CreateAlertHandler(w http.ResponseWriter, r *http.Request) {
 	var newAlert models.Alert
 	err := json.NewDecoder(r.Body).Decode(&newAlert)
